testing/network_policies/aks-store-demo/cilium-allow-all.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium-allow-all
  namespace: backend-ns
spec:
  endpointSelector: {}
  ingress:
  - {}
  egress:
  - {}
