testing/network_policies/aks-store-demo/cilium-ipblock-egress-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium-ipblock-egress-ingress
  namespace: backend-ns
spec:
  endpointSelector:
    matchLabels:
      app: makeline-service
  ingress:
  - fromCIDR:
    - 172.17.0.0/16
    toPorts:
    - ports:
      - port: "3001"
        protocol: TCP
  egress:
  - toCIDR:
    - 10.0.0.0/24
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
