testing/network_policies/aks-store-demo/cilium-pod-selector-egress-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium-pod-selector-egress-ingress
  namespace: backend-ns
spec:
  endpointSelector:
    matchLabels:
      app: makeline-service
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: order-service
  egress:
  - toEndpoints:
    - matchLabels:
        app: product-service
