testing/network_policies/aks-store-demo/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: database-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
