testing/network_policies/aks-store-demo/namespace-selector-egress-with-port-range.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-selector-egress-with-port-range
  namespace: backend-ns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: database-ns
    ports:
    - protocol: TCP
      port: 27010
      endPort: 27020
