testing/network_policies/aks-store-demo/namespace-selector-ingress-with-ports.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-selector-ingress-with-ports
  namespace: database-ns
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backend-ns
    ports:
    - protocol: TCP
      port: 27017
