testing/network_policies/aks-store-demo/pod-namespace-selector-combined.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-namespace-selector-combined
  namespace: database-ns
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backend-ns
      podSelector:
        matchLabels:
          app: makeline-service
    ports:
    - protocol: TCP
      port: 27017
