testing/network_policies/aks-store-demo/pod-selector-egress-label-mismatch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-selector-egress-label-mismatch
  namespace: backend-ns
spec:
  podSelector:
    matchLabels:
      app: order-service
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: ghost-service
