testing/network_policies/aks-store-demo/pod-selector-egress-with-port-range.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-selector-egress-with-port-range
  namespace: backend-ns
spec:
  podSelector:
    matchLabels:
      app: order-service
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: makeline-service
    ports:
    - protocol: TCP
      port: 3000
      endPort: 3010
